--- a/package.json
+++ b/package.json
@@ -9,11 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.10",
     "@next/font": "13.1.6",
+    "framer-motion": "^10.0.1",
+    "googleapis": "^112.0.0",
+    "lodash": "^4.17.21",
     "next": "13.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "swr": "^2.0.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
