--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.10.6",
     "@headlessui/react": "^1.7.10",
     "@next/font": "13.1.6",
+    "axios": "^1.3.4",
     "framer-motion": "^10.0.1",
     "googleapis": "^112.0.0",
     "lodash": "^4.17.21",
