--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "googleapis": "^112.0.0",
     "lodash": "^4.17.21",
     "next": "13.1.6",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "swr": "^2.0.4"
